--- a/day-1-flexbox/6-responsive-images/begin/image-exercise.html
+++ b/day-1-flexbox/6-responsive-images/begin/image-exercise.html
@@ -2,13 +2,17 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<title>Document</title>
 </head>
 <body>
 	<!-- visit http://scottjehl.github.io/picturefill/ for picturefill source -->
 	<div class="bkgdimg"></div>
-	<div>
-		<img src="img/peace-pie-original.jpg" alt="The original giant peace pie">
-	</div>
+	<picture>
+		<source srcset="img/peace-pie-original.jpg" media="(min-width: 1200px)">
+		<source srcset="img/peace-pie-500.jpg" media="(min-width: 800px)">
+  	<!-- Fallback or mobile version -->
+		<img src="img/peace-pie-150.jpg" alt="The original giant peace pie">
+	</picture>
 </body>
 </html>
