Added responsive bg image

--- a/day-1-flexbox/6-responsive-images/begin/image-exercise.html
+++ b/day-1-flexbox/6-responsive-images/begin/image-exercise.html
@@ -9,6 +9,7 @@
 		document.createElement("picture");
 	</script>
 	<script src="picturefill.min.js"></script>
+	<link rel="stylesheet" href="style.css">
 </head>
 <body>
 	<!-- visit http://scottjehl.github.io/picturefill/ for picturefill source -->
